[gd_scene format=3]

[ext_resource type="Script" path="res://scripts/flow/screens/ChapterPrepScreen.gd" id="1_script"]

[node name="ChapterPrepScreen" type="PanelContainer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.0
offset_top = -170.0
offset_right = 290.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ChapterPrepLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "챕터 출정 준비"
horizontal_alignment = 1

[node name="PartyLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "-"
horizontal_alignment = 1

[node name="StartExpeditionButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "출정 시작"

[node name="BackToMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "메인으로"
